# getrafty

./: .backlog.txt  .bashrc  .clang-format  .clang-tidy  .fragments  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  backlog.txt  boot.sh  clippy.sh  cmake-variants.yaml  default.profraw  docker-compose.yml  fragments.properties  netlify.toml  requirements.txt  tasklet  tasklet.py
.claude/: settings.local.json
.fragments/: @1859d756.json
cmake/: Ccache.cmake  CheckCompiler.cmake  CompileOptions.cmake  Coverage.cmake  Development.cmake  Helpers.cmake  Logging.cmake  Platform.cmake  Sanitize.cmake  Task.cmake
docs/: docusaurus.config.js  package-lock.json  package.json
docs/docs/: getting-started.md  intro.md
docs/src/css/: custom.css
fragments/: build.gradle.kts  gradle.properties  settings.gradle.kts
fragments/src/main/java/org/getrafty/fragments/: FragmentUtils.java
fragments/src/main/java/org/getrafty/fragments/actions/: InsertFragmentAction.java  RemoveFragmentAction.java  ToggleFragmentsViewAction.java
fragments/src/main/java/org/getrafty/fragments/config/: FragmentsPluginConfig.java  PluginConfig.java
fragments/src/main/java/org/getrafty/fragments/dao/: FragmentsDao.java
fragments/src/main/java/org/getrafty/fragments/inspection/: FragmentCollisionHighlighter.java
fragments/src/main/java/org/getrafty/fragments/listeners/: EditorListener.java  FileChangeListener.java  FileOpenListener.java  FileSaveListener.java  FragmentCaretListener.java  OnProjectOpened.java  PostStartupPluginListener.java
fragments/src/main/java/org/getrafty/fragments/services/: FragmentsIndex.java  FragmentsManager.java
fragments/src/main/java/org/getrafty/fragments/status/: FragmentViewWidget.java  FragmentViewWidgetFactory.java
fragments/src/test/java/org/getrafty/fragments/actions/: InsertFragmentActionTest.java
fragments/src/test/java/org/getrafty/fragments/dao/: FragmentsDaoTest.java
image/: Dockerfile  install_deps.sh
site/: _config.js  netlify.toml
site/src/: getting-started.md  hello-world.md  index.md  rpc-io.md  tutorial.md
site/src/_includes/: layout.vto
site/src/etc/: use-docker.md  use-vscode.md
site/src/static/: main.css  styles.css
snippy/: settings.gradle.kts
snippy/src/main/java/org/getrafty/fragments/actions/: InsertFragmentAction.java  RemoveFragmentAction.java  ToggleFragmentsViewAction.java
snippy/src/main/java/org/getrafty/fragments/config/: FragmentsPluginConfig.java
snippy/src/main/java/org/getrafty/fragments/dao/: FragmentsDao.java
snippy/src/main/java/org/getrafty/fragments/inspection/: FragmentCollisionHighlighter.java
snippy/src/main/java/org/getrafty/fragments/listeners/: FileChangeListener.java  FileOpenListener.java  FileSaveListener.java  FragmentsIndexUtils.java  PostStartupPluginListener.java
snippy/src/main/java/org/getrafty/fragments/services/: FragmentsIndex.java  FragmentsManager.java
snippy/src/main/java/org/getrafty/fragments/status/: FragmentViewWidget.java
snippy/src/main/java/org/getrafty/snippy/actions/: InsertSnippetAction.java  ToggleSnippetFocusAction.java
snippy/src/main/java/org/getrafty/snippy/config/: SnippyConfig.java
snippy/src/main/java/org/getrafty/snippy/dao/: SnippetDao.java
snippy/src/main/java/org/getrafty/snippy/listeners/: SnippetFileSaveListener.java  SnippetSaveListenerStartup.java
snippy/src/main/java/org/getrafty/snippy/services/: SnippetService.java
snippy/src/main/java/org/getrafty/snippy/status/: ModeStatusWidget.java  ModeStatusWidgetFactory.java
snippy/src/main/java/org/getrafty/snippy/utils/: SnippetRegistry.java
tasks/: CMakeLists.txt
tasks/async-io/: CMakeLists.txt  event_watcher.cpp  event_watcher.hpp  event_watcher_test.cpp  queue.hpp  task.yaml  thread_pool.cpp  thread_pool.hpp
tasks/event_watcher/: CMakeLists.txt  event_watcher.cpp  event_watcher.hpp  event_watcher_test.cpp  queue.hpp  task.yaml
tasks/hello-world/: CMakeLists.txt  task.json  tests.cpp  time_machine.cpp  time_machine.h  time_machine.hpp
tasks/mpsc_queue/: CMakeLists.txt  queue_bench.cpp  queue_test.cpp
tasks/myfs/: CMakeLists.txt  myfs_server.cpp  myfs_server.hpp  myfs_server_test.cpp
tasks/rpc-io/: CMakeLists.txt  channel.hpp  client.cpp  client.hpp  client_stress_test.cpp  client_test.cpp  clock.hpp  ephemeral_channel.cpp  ephemeral_channel.hpp  ephemeral_channel_test.cpp  ephemeral_transport.cpp  ephemeral_transport.hpp  ephemeral_transport_test.cpp  error.hpp  event_watcher.cpp  event_watcher.hpp  event_watcher_test.cpp  listener.hpp  logging.hpp  message.hpp  queue.hpp  server.cpp  server.hpp  server_test.cpp  socket.hpp  tcp_socket.cpp  tcp_socket.hpp  tcp_socket_stress_test.cpp  tcp_socket_test.cpp  thread_pool.cpp  thread_pool.hpp  timer.cpp  timer.hpp  timer_test.cpp  transport.hpp  util.hpp
tasks/rpc-io/coro/: queue.hpp  queue_test.cpp
tasks/rpc-io/wheels/: CMakeLists.txt  cpu_timer.hpp  logging.cpp  queue.hpp  queue_test.cpp  thread_pool.cpp  thread_pool.hpp  thread_pool_test.cpp  wait_group.hpp
tasks/socket/: CMakeLists.txt  event_watcher.cpp  event_watcher.hpp  framed_transport.cpp  framed_transport.hpp  socket.cpp  socket.hpp  socket_bench.cpp  socket_stress_test.cpp  socket_test.cpp  task.yaml  tcp_transport.cpp  tcp_transport.hpp  transport.hpp
tasks/thread-pool/: CMakeLists.txt  queue.hpp  queue_test.cpp  task.yaml  thread_pool.cpp  thread_pool.hpp  thread_pool_test.cpp  wait_group.hpp
tasks/tutorial/: CMakeLists.txt  flux_capacitor.cpp  flux_capacitor.hpp  flux_capacitor_test.cpp  task.yaml
